--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,27 @@
-version: '3'
+version: '3.5'
 
 services:
 
-  mongo:
+  userDB:
     image: mongo
     restart: always
+    container_name: userDatabase
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      MONGO_INITDB_USERNAME: ${MONGO_USERNAME}
+      MONGO_INITDB_PASSWORD: ${MONGO_PASS}
+      MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
     volumes:
-      - ./data:/data/db
+      - ./.docker/data/db:/data/db
+      - ./.docker/mongo-init.sh:/docker-entrypoint-initdb.d/init-mongo.sh
     networks:
       - mongo_db
-
-  mongo-express:
-    image: mongo-express
-    restart: always
     ports:
-      - ${MONGO_EXPRESS_PORT}:${MONGO_EXPRESS_PORT}
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ROOT_USERNAME}
-      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}:${MONGO_PORT}/
-    networks:
-      - mongo_db
-
-    volumes:
-      - ./data:/data/db
+      - ${MONGO_PORT}:${MONGO_PORT}
 
 networks:
   mongo_db:
+
+volumes:
+  data:
