--- a/package.json
+++ b/package.json
@@ -22,19 +22,23 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "github:nestjs/jwt",
-    "@nestjs/mongoose": "github:nestjs/mongoose",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
+    "@nestjs/throttler": "^3.0.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
+    "express": "^4.18.1",
     "mongoose": "^6.4.2",
     "passport": "^0.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.5.0",
     "webpack": "^5.0.0"
   },
   "devDependencies": {
