--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/throttler": "^3.0.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.2",
     "passport": "^0.6.0",
