--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "express": "^4.18.1",
     "mongoose": "^6.4.2",
     "passport": "^0.6.0",
