--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nestjs/throttler": "^3.0.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
+    "cache-manager": "^4.1.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "express": "^4.18.1",
@@ -48,6 +50,7 @@
     "@nestjs/cli": "^8.2.8",
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.7",
+    "@types/cache-manager": "^4.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.11.58",
