fix(ci): typo on pnpm Install

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install Dependencies
-        run: pnpm Install
+        run: pnpm install
 
       - name: Unit Testing
         run: pnpm test; pnpm test:cov
