--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,10 +5,15 @@ on:
   push:
     branches:
       - 'feat/**'
+      - 'dev'
+      - '**-test'
     paths:
       - 'src/**.ts'
       - 'src/**/**.ts'
   pull_request:
+    branches:
+      - 'dev'
+      - 'master'
   
 jobs:
   install:
